--- a/client/public/index.html
+++ b/client/public/index.html
@@ -43,6 +43,7 @@
   <form name="contact" netlify netlify-honeypot="bot-field" hidden>
     <input type="text"  name="name">
     <input type="email" name="email">
+    <input type="tel" name="phone">
     <textarea name="message"></textarea>
 </form>
 </html>
