--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,18 +23,11 @@
           "name": "Jason Hooamlu",
           "alternateName": "Jason Ho'omalu",
           "identifier": "jchoomalu",
-          "interactionStatistic": [
-            {
-              "@type": "InteractionCounter",
-              "interactionType": "https://github.com/jchoomalu",
-              "userInteractionCount": 1
-            },
-            {
-              "@type": "InteractionCounter",
-              "interactionType": "https://www.linkedin.com/in/jason-hoomalu/",
-              "userInteractionCount": 1
-            },
-      ],
+        "interactionStatistic": [{
+          "@type": "InteractionCounter",
+          "interactionType": "https://schema.org/FollowAction",
+          "userInteractionCount": 1
+        }],
           "agentInteractionStatistic": {
             "@type": "InteractionCounter",
             "interactionType": "https://www.linkedin.com/in/jason-hoomalu/",
